[project]
name = "finrl-crypto-portfolio-allocation"
version = "0.1.0"
description = "FinRL: Deep Reinforcement Learning in Finance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "aiodns==3.5.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiohttp-cors==0.8.1",
    "aiosignal==1.4.0",
    "alabaster==1.0.0",
    "ale-py==0.11.2",
    "alpaca-py==0.42.2",
    "alpaca-trade-api==3.2.0",
    "annotated-types==0.7.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "bottleneck==1.6.0",
    "build==1.3.0",
    "cachetools==6.2.0",
    "ccxt==4.5.7",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "colorful==0.5.7",
    "commonmark==0.9.1",
    "contourpy==1.3.3",
    "cryptography==46.0.2",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "cython==3.1.4",
    "decorator==5.2.1",
    "deprecation==2.1.0",
    "distlib==0.4.0",
    "docutils==0.21.2",
    "empyrical-reloaded==0.5.12",
    "exchange-calendars==4.11.1",
    "executing==2.2.1",
    "farama-notifications==0.0.4",
    "filelock==3.19.1",
    "fonttools==4.60.1",
    "frozendict==2.4.6",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "google-api-core==2.25.2",
    "google-auth==2.41.1",
    "googleapis-common-protos==1.70.0",
    "gputil==1.4.0",
    "greenlet==3.2.4",
    "grpcio==1.75.1",
    "h11==0.16.0",
    "identify==2.6.15",
    "idna==3.10",
    "imagesize==1.4.1",
    "importlib-metadata==8.5.0",
    "iniconfig==2.1.0",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jqdatasdk==1.9.7",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "korean-lunar-calendar==0.3.1",
    "lz4==4.4.4",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.0.3",
    "multidict==6.6.4",
    "multitasking==0.0.12",
    "nbformat>=5.10.4",
    "networkx==3.5",
    "nodeenv==1.9.1",
    "numpy==2.3.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "opencensus==0.11.4",
    "opencensus-context==0.1.3",
    "opencv-python==4.11.0.86",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-prometheus==0.58b0",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-market-calendars==5.1.1",
    "parso==0.8.5",
    "peewee==3.17.3",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "plotly>=5.24.1",
    "pluggy==1.6.0",
    "ply==3.11",
    "pre-commit==4.3.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.0",
    "proto-plus==1.26.1",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-spy==0.4.1",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycares==4.11.0",
    "pycparser==2.23",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pyfolio-reloaded==0.9.9",
    "pygame==2.6.1",
    "pygments==2.19.2",
    "pyluach==2.3.0",
    "pymysql==1.1.2",
    "pyparsing==3.2.5",
    "pyportfolioopt>=1.5.6",
    "pyproject-hooks==1.2.0",
    "pysocks==1.7.1",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.1",
    "ray==2.49.2",
    "recommonmark==0.7.1",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rich==14.1.0",
    "roman-numerals-py==3.1.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "selenium==4.32.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smart-open==7.3.1",
    "sniffio==1.3.1",
    "snowballstemmer==3.0.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlalchemy==1.4.54",
    "sseclient-py==1.8.0",
    "stable-baselines3==2.7.0",
    "stack-data==0.6.3",
    "stockstats==0.6.5",
    "swig==4.3.1.post0",
    "sympy==1.14.0",
    "ta-lib==0.6.7",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.4",
    "threadpoolctl==3.6.0",
    # "thriftpy2==0.5.3",
    "toolz==1.0.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.31.0",
    "trio-websocket==0.12.2",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==1.26.20",
    "virtualenv==20.34.0",
    "wcwidth==0.2.14",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "websockets==10.4",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.3",
    "wrds==3.1.6",
    "wsproto==1.2.0",
    "yarl==1.20.1",
    "yfinance==0.2.58",
    "zipp==3.23.0",
]
